--- a/index.html
+++ b/index.html
@@ -50,23 +50,24 @@
 										</header>
 										<p>Use this bookmarket to view all your grades immediately on the Grades/Attendance page. Drag the bookmarklet to your bookmarks bar to begin.</p>
 										<pre>
+											<!-- pre preserves whitespace, so we have to indent all the way back -->
 										  <code>
-											$('.nathan-appended').remove(); // remove previously appended stuff
-											// find each course
-											$('.gradebook-course').each((i, el) => {
-											  // for each course, find the course grade
-											  const grade = $(el).find('.summary-course .rounded-grade').html();
-											  // put the grade next to the course title
-											  $(el).find('.gradebook-course-title').append(
-											    // give nathan-appended class so then we can remove the stuff later
-											    // grade || 'N/A' -> if grade is undefined, then 'N/A' will print
-											    ` <span class='nathan-appended' style='color: #3aa406; font-size: 13px; font-weight: bold; padding-right: 10px; float: right;'>${grade || 'N/A'}</span>`
-											  );
-											});
+$('.nathan-appended').remove(); // remove previously appended stuff
+// find each course
+$('.gradebook-course').each((i, el) => {
+  // for each course, find the course grade
+  const grade = $(el).find('.summary-course .rounded-grade').html();
+  // put the grade next to the course title
+  $(el).find('.gradebook-course-title').append(
+    // give nathan-appended class so then we can remove the stuff later
+    // grade || 'N/A' -> if grade is undefined, then 'N/A' will print
+    ` <span class='nathan-appended' style='color: #3aa406; font-size: 13px; font-weight: bold; padding-right: 10px; float: right;'>${grade || 'N/A'}</span>`
+  );
+});
 										  </code>
 										</pre>
 										<ul class="actions">
-											<li><a href="javascript:$('.nathan-appended').remove(); $('.gradebook-course').each((i, el) => { const grade = $(el).find('.summary-course .rounded-grade').html(); $(el).find('.gradebook-course-title').append(` <span class='nathan-appended' style='color: #3aa406;font-size:13px;font-weight:bold;padding-right:10px;float:right;'>${grade || 'N/A'}</span>`); });" class="button">Show Grades</a></li>
+											<li><a href="javascript:$('.nathan-appended').remove(); $('.gradebook-course').each((i, el) => { const grade = $(el).find('.summary-course .rounded-grade').html(); $(el).find('.gradebook-course-title').append(` <span class='nathan-appended' style='color: #3aa406;font-size:13px;font-weight:bold;padding-right:10px;float:right;'>${grade || 'N/A'}</span>`); });" class="button special">Show Grades</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="https://i.gyazo.com/40bb1ddd7b15b812dc7d5bb5a5503168.gif" alt="" /></span>
@@ -78,6 +79,7 @@
 								<header class="major">
 									<h2>All Bookmarklets</h2>
 									<p>Drag these bookmarklets to your bookmarks bar to begin using them. More coming soon!</p>
+									<span class="image"><img src="https://i.gyazo.com/ba1c3b8c3a2825610c20897368033edd.gif" /></span>
 								</header>
 								<footer class="major">
 									<ul class="actions">
