--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 											<h2>View Your Grades</h2>
 										</header>
 										<p>Use this bookmarket to view all your grades immediately on the Grades/Attendance page. Drag the bookmarklet to your bookmarks bar to begin.</p>
-										<script src="https://gist.github.com/nathanhleung/ed47ec099a10c311f5d92f1b8d694db1.js"></script>
 										<ul class="actions">
 											<li><a href="javascript:$('.nathan-appended').remove(); $('.gradebook-course').each((i, el) => { const grade = $(el).find('.summary-course .rounded-grade').html(); $(el).find('.gradebook-course-title').append(` <span class='nathan-appended' style='color: #3aa406;font-size:13px;font-weight:bold;padding-right:10px;float:right;'>${grade || 'N/A'}</span>`); });" class="button special">Show Grades</a></li>
+											<li><a href="https://gist.github.com/nathanhleung/ed47ec099a10c311f5d92f1b8d694db1#file-show-grades-js" class="button">Source Code</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="https://i.gyazo.com/40bb1ddd7b15b812dc7d5bb5a5503168.gif" alt="" /></span>
