load uuid over https

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+			<script src="https://wzrd.in/standalone/uuid%2Fv4@latest"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
