update source code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<p>When you use the bookmarklet, anonymous usage data will be collected. By installing and using the bookmarklet, you consent to this data collection.</p>
 										<ul class="actions">
 											<li><a href="#" id="bookmarklet" class="button special" disabled>Show All Grades</a></li>
-											<li><a href="https://gist.github.com/nathanhleung/ed47ec099a10c311f5d92f1b8d694db1#file-show-grades-js" class="button">Source Code</a></li>
+											<li><a href="https://github.com/nathanhleung/schoology-bookmarklets" class="button">Source Code</a></li>
 										</ul>
 									</div>
 									<span class="image"><img class="img-responsive" src="https://i.gyazo.com/2cda17530adbe759b39fa061d99ebd66.gif" alt="" /></span>
